2003-08-25 Serg Stoyan <stoyan@on.com.ua>

	* PCProjectBuilder.[hm]: stop logging when building/cleaning.
	Cleanups

2003-08-09 Philippe C.D. Robert <probert@siggraph.org>

        * Support for an external debugger: PCLib/PCDefines.h,
          PCAppController.m, PCPrefController.m, PCPrefController+UInterface.m,
          PCPrefController.h, PCLib/PCProjectDebugger.m

2003-08-03 Philippe C.D. Robert <probert@siggraph.org>

        * Fixed typo: PCLib/PCProject+ComponentHandling.m, PCMenuController.m

2003-08-01 Philippe C.D. Robert <probert@siggraph.org>

        * Removed -Werror: GNUMakefile.preamble, GNUMakefile.bundles
        * Added -methodSignatureForSelector: PCAppController.[hm]

2003-07-10 Philippe C.D. Robert <probert@siggraph.org>

        * Updated the ANNOUNCE text 
        * Added missing includes: PCLib/PCDataSource.m, PCLib/PCButton.m
        * Added note in README about using ProjectCenter with Cocoa
        * Disabled unused menu entries: ProjectCenter_main.m
        * Some spelling corrections: PCMenuController.m

2003-07-05 Philippe C.D. Robert <probert@siggraph.org>

        * Uppercase key for interface category lookup: PCFileManager.m
        * Adjusting UI elements: PCGormProject.m
        * Adding proper header: PCLib/PCButton.h, PCLib/PCButton.m
        * Code cleanup and corrected contact address: PCInfoController.m,
          PCInfoController.h, PCLogController.m, PCLogController.h, 
          PCAppController.h, PCAppController.m, PCFindController.h,
          PCFindController.m, PCMenuController.h, PCMenuController.m,
          PCPrefController.m, PCPrefController.h PCLib/PCBundleLoader.m,
          PCLib/PCDataSource.h, PCLib/PCDataSource.m
        * Extracting UI creation into category: PCPrefController+UInterface.h,
          PCPrefController+UInterface.m, PCPrefController.m, PCPrefController.h,
          PCLib/PCProjectDebugger+UInterface.h, PCLib/PCProjectDebugger.h,